--- a/dynamodb-admin/Dockerfile
+++ b/dynamodb-admin/Dockerfile
@@ -13,7 +13,7 @@ RUN set -xe && \
     mv /opt/dynamodump-1.1.4 /opt/dynamodbdump && cd /opt/dynamodbdump && \
     pip install -r requirements.txt && \
     chmod +x /opt/dynamodbdump/dynamodump.py && \
-    ln -s /opt/dynamodbdump/dynamodump.py /usr/local/bin/dynamodump && \
+    ln -s /opt/dynamodbdump/dynamodump.py /usr/bin/dynamodump && \
     ln -s /opt/dynamodbdump/dump /var/dump
 
 RUN npm install dynamodb-admin -g
