Improving docker images

--- a/dynamodb-admin/Dockerfile
+++ b/dynamodb-admin/Dockerfile
@@ -1,26 +1,40 @@
-FROM node:6-alpine
+ARG NODEJS_VERSION="6.16.0"
 
-ARG DYNAMODBDUMP_VERSION=1.1.4
+FROM node:$NODEJS_VERSION-alpine
+
 ENV DYNAMO_ENDPOINT=
+
+WORKDIR /tmp
 
 RUN apk --update add --virtual .persistent-deps \
                                python \
                                py-pip
 
-RUN apk add ca-certificates wget && update-ca-certificates
+ARG DYNAMODBADMIN_VERSION="3.1.0"
+RUN npm install dynamodb-admin@${DYNAMODBADMIN_VERSION} -g
 
+ARG DYNAMODBDUMP_VERSION="1.1.4"
+ARG DYNAMODBDUMP_SHA256="247c1f4b4998bae5228c8d57a69f525d22476cdddd32e16b7733a78fead6487d"
+ARG DYNAMODBDUMP_SOURCE_URL="https://github.com/bchew/dynamodump/archive"
 RUN set -xe && \
-    wget -qO- https://github.com/bchew/dynamodump/archive/v${DYNAMODBDUMP_VERSION}.tar.gz | tar -xvz -C /opt/ && \
-    mv /opt/dynamodump-${DYNAMODBDUMP_VERSION} /opt/dynamodbdump && cd /opt/dynamodbdump && \
+    wget ${DYNAMODBDUMP_SOURCE_URL}/v${DYNAMODBDUMP_VERSION}.tar.gz && \
+    echo "${DYNAMODBDUMP_SHA256}  v${DYNAMODBDUMP_VERSION}.tar.gz" | sha256sum -c
+    
+RUN set -xe && \
+    tar zxvf v${DYNAMODBDUMP_VERSION}.tar.gz && \
+    mkdir -p /opt/dynamodbdump && \
+    mv -f dynamodump-${DYNAMODBDUMP_VERSION}/* /opt/dynamodbdump && \
+    cd /opt/dynamodbdump && \
     pip install -r requirements.txt && \
     chmod +x /opt/dynamodbdump/dynamodump.py && \
     ln -s /opt/dynamodbdump/dynamodump.py /usr/bin/dynamodump && \
-    ln -s /opt/dynamodbdump/dump /var/dump
+    ln -s /opt/dynamodbdump/dump /var/dump && \
+    rm -Rf /tmp/v${DYNAMODBDUMP_VERSION}.tar.gz /tmp/dynamodump-${DYNAMODBDUMP_VERSION}
 
-RUN npm install dynamodb-admin -g
+COPY ./tools /opt/tools
+RUN chmod -R +x /opt/tools/
 
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+WORKDIR /var/dump
+VOLUME ['/var/dump']
 EXPOSE 8001
+ENTRYPOINT ["/bin/sh", "/opt/tools/entrypoint.sh"]
